# ZPE-Video

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  AUDITOR_PLAYBOOK.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  PUBLIC_AUDIT_LIMITS.md  README.md  RELEASING.md  REPRODUCIBILITY.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  evidence_dispute.md  feature_request.md  question.md
.github/workflows/: auto-add-to-project.yml  ci.yml  publish.yml  sbom.yml  verify-package.yml
.gpd/: CONVENTIONS.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  state.json
.gpd/PHASES/09-architectural-purification-and-contour-primary-recovery/: SUMMARY.md  VERDICT.md
.gpd/PHASES/09.1-seedance-informed-video-subchannel-factorization-hypothesis/: SUMMARY.md  VERDICT.md
.gpd/PHASES/09.2-primitive-native-layered-control-plane-wedge/: SUMMARY.md  VERDICT.md
.gpd/PHASES/09.3-narrow-event-annotated-surveillance-wedge/: SUMMARY.md  VERDICT.md
.gpd/PHASES/09.3.1-portal-anchored-primitive-event-consumer-on-sparse-facility-crossing/: SUMMARY.md  VERDICT.md
.gpd/PHASES/09.3.2-portal-local-state-machine/: SUMMARY.md  VERDICT.md
docs/: ARCHITECTURE.md  CURRENT_PUBLIC_STATUS.md  FAQ.md  LEGAL_BOUNDARIES.md  PUBLIC_AUDIT_SNAPSHOT_STAMP.md  QUICKSTART.md  README.md  REPO_SHAPE.md  RESTART_PROMPT_2026-04-24.md  STATUS.md  SUPPORT.md  TRANSPARENCY_JOURNEY.md  VERIFICATION.md  WEDGE.md  WIRE_FORMAT.md
docs/_reorientation/2026-04-17/: FIX_LOG.md  NOVELTY_CARD.md  OPEN_QUESTIONS.md
docs/inputs/: README.md
docs/inputs/2026-03-22_science_engineering_pack/: 03_BLOCKERS_AND_FAILURE_MODES.md  05_REPO_AND_ARTIFACT_MAP.md  07_NEXT_MOVES.md  08_QUESTIONS_FOR_SCIENCE_ENGINEERING.md
docs/inputs/2026-03-22_science_engineering_pack_phase09_3_1_local/: 05_LOCAL_CONTINUATION_AND_POD_SHUTDOWN.md  08_QUESTIONS_FOR_SCIENCE_AND_ENGINEERING.md
docs/inputs/2026-03-22_science_engineering_pack_phase09_3_local/: 00_READ_FIRST.md  01_EXECUTIVE_STATUS_AND_POV.md  02_AUTHORITY_GATES_AND_LATEST_NUMBERS.md  03_PHASE_09_3_NARROW_SURVEILLANCE.md  05_LOCAL_CONTINUATION_ON_MAC.md  06_REPO_RUNTIME_AND_ARTIFACT_MAP.md  07_NEXT_EXPERIMENT_OPTIONS.md  08_QUESTIONS_FOR_SCIENCE_AND_ENGINEERING.md  09_POD_AND_SPACE_ADVISORY.md
docs/inputs/2026-03-23_phase09_3_2_retire_surface/: 01_STATUS.md
docs/transparency/: README.md
docs/transparency/phase09_4_1_1_2_2_receipt_core_provenance_benchmark/: PLAN.md  SUMMARY.md  baseline_table.csv  manifest_binding.json  summary.json
docs/transparency/phase9_4_1_1_2_1_candidate_a_roi_sidecar/: PLAN.md  SUMMARY.md  harness.py  matched_bitrate_table.csv  summary.json
docs/transparency/phase9_4_1_1_2_1_candidate_b_video_llm_object_memory/: PLAN.md  SUMMARY.md  cross_writer_hashes.json  harness.py  per_query_table.csv  summary.json
docs/transparency/phase9_4_1_1_2_1_candidate_c_primitive_semantic_enrichment/: PLAN.md  SUMMARY.md  ablation_table.csv  cv_table.csv  harness.py  summary.json
docs/transparency/phase9_4_1_1_2_fair_baseline/: BENCHMARK-REPORT.md  PLAN.md  SUMMARY.md  harness.py  summary.json
docs/transparency/research_ledger/: TAKEOVER_ASSESSMENT_2026-04-16_WEDGE.md  VERDICT-SYNTHESIS.md  WAVE-2-SYNTHESIS-SUMMARY.md  ranked_hypothesis_ladder.md
examples/: 01_round_trip.py  02_cross_writer.py  03_file_round_trip.py  README.md
proofs/: PROOF_INDEX.md  README.md
proofs/logs/: README.md
proofs/manifests/: CURRENT_AUTHORITY_PACKET.md  current_authority_packet.json
proofs/reference/2026-03-09_workspace_snapshot/: README.md  (+18 more)
proofs/reruns/: README.md
scripts/: authority_bundle.py  compliance_audit.sh  execute_wave1.py  measure_am_c01.py  measure_am_c01_ladder.py  receipt_core_benchmark.py
src/: README.md
src/zpe_video/: __init__.py  codec.py  constants.py  detector.py  fixtures.py  manifest.py  metrics.py  models.py  pipeline.py  receipt.py  vision.py
tests/: test_codec.py  test_manifest.py  test_receipt.py
(+16 files in other folders)
