[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-video"
version = "0.1.0"
description = "ZPE Video — perception receipts for AI pipelines. Deterministic, cross-writer-stable, CRC-protected binary records of what a detector+tracker saw in a video."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {file = "LICENSE"}
authors = [
  {name = "Zer0pa", email = "architects@zer0pa.ai"},
]
keywords = [
  "video",
  "perception",
  "receipts",
  "provenance",
  "c2pa",
  "chain-of-custody",
  "video-llm",
  "object-memory",
  "deterministic-binary",
  "cross-writer-hash-stability",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security :: Cryptography",
]

# The core perception-receipt surface is deliberately zero-dependency —
# stdlib struct / zlib / hashlib only. This is part of the wedge: the
# format is implementable from the spec in <100 lines of any language.
dependencies = []

[project.optional-dependencies]
# Development and contribution
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.5",
]

# Producing receipts from raw video: needs detector + CV
producer = [
  "numpy>=1.26,<2",
  "opencv-python-headless>=4.10",
  "ultralytics>=8.4",
  "torch>=2.2",
]

# Research-harness internals (Wave-1 pipeline, legacy benchmarks)
research = [
  "numpy>=1.26,<2",
  "opencv-python-headless>=4.10",
]

# Everything a contributor likely wants
all = [
  "zpe-video[dev,producer,research]",
]

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-Video"
Repository = "https://github.com/Zer0pa/ZPE-Video"
Issues = "https://github.com/Zer0pa/ZPE-Video/issues"
Changelog = "https://github.com/Zer0pa/ZPE-Video/blob/main/CHANGELOG.md"
Documentation = "https://github.com/Zer0pa/ZPE-Video/tree/main/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
zpe_video = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-v --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line-length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
