[build-system]
requires = ["setuptools>=69,<82", "wheel>=0.43,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-video"
version = "0.0.0"
description = "ZPE Video Wave-1 private staging package."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "LicenseRef-Zer0pa-SAL-6.0"
license-files = ["LICENSE"]
authors = [
  {name = "Zer0pa"},
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]
