[build-system]
requires = ["setuptools>=69,<82", "wheel>=0.43,<1"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-video"
version = "0.1.0"
description = "ZPE Video structure encoding package."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "LicenseRef-Zer0pa-SAL-7.0"
license-files = ["LICENSE"]
authors = [
  {name = "Zer0pa (Pty) Ltd", email = "architects@zer0pa.ai"},
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyflakes>=3.2",
  "build>=1.2",
]

[tool.setuptools.packages.find]
where = ["src"]
